# service/api/api-handler.go
@@ -13,9 +13,13 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.PATCH("/users/:username", rt.wrap(rt.setMyUsername))
 	rt.router.GET("/users/:username", rt.wrap(rt.getUserProfile))
 	rt.router.POST("/users/:username/following/", rt.wrap(rt.followUser))
-	rt.router.POST("/users/:username/following/:followingusername", rt.wrap(rt.unfollowUser))
+	rt.router.DELETE("/users/:username/following/:followingusername", rt.wrap(rt.unfollowUser))
 	rt.router.POST("/users/:username/banned", rt.wrap(rt.banUser))
-	rt.router.POST("/users/:username/banned/:bannedusername", rt.wrap(rt.unbanUser))
+	rt.router.DELETE("/users/:username/banned/:bannedusername", rt.wrap(rt.unbanUser))
+	rt.router.POST("/users/:username/photos/", rt.wrap(rt.uplaodPhoto))
+	rt.router.DELETE("/users/:username/photos/:photoid", rt.wrap(rt.deletePhoto))
+	rt.router.POST("/users/:username/photos/:photoid/likes/", rt.wrap(rt.likePhoto))
+	// rt.router.DELETE("/users/:username/photos/:photoid/likes/:likeid", rt.wrap(rt.unlikePhoto))
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
 
