# service/api/like-photo.go
@@ -1,0 +1,49 @@
+package api
+
+import (
+	"github.com/zoematr/WASAPhoto/service/api/reqcontext"
+	"encoding/json"
+	"net/http"
+	"github.com/julienschmidt/httprouter"
+)
+
+// Funzione che gestisce l'upload di una foto
+func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+
+	w.Header().Set("Content-Type", "application/json")
+	authToken := r.Header.Get("Authorization")
+	targetUsername := ps.ByName("username")
+	targetPhotoId := ps.ByName("photoid")
+	pathRequestUsername := ps.ByName("likingusername")
+	tokenDbPath, err := rt.db.GetTokenFromUsername(pathRequestUsername)
+	// Verifica l'identità dell'utente che effettua la richiesta
+	valid := validateRequestingUser(tokenDbPath, authToken)
+	if valid != 0 {
+		w.WriteHeader(valid)
+		return
+	}
+	banned, err := rt.db.CheckBanned(targetUsername, pathRequestUsername)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("like photo: error executing db function call")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	if banned != false {
+		w.WriteHeader(http.StatusForbidden)
+		return
+	}
+
+
+	err = rt.db.AddLike(targetPhotoId, pathRequestUsername)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("photolike error")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	// Invia una risposta con stato "Created" e un oggetto JSON che rappresenta la foto appena caricata.
+	w.WriteHeader(http.StatusCreated)
+	_ = json.NewEncoder(w).Encode(pathRequestUsername)
+
+}
